Fixed navbar on smaller screens

--- a/src/components/navbar/navbarComponent.module.scss
+++ b/src/components/navbar/navbarComponent.module.scss
@@ -43,7 +43,7 @@
 		bottom: 0;
 		background-color: $dark-orange;
 		height: 5rem;
-		width: 100vw;
+		width: 100%;
 		flex-direction: row;
 	}
 
